k8s/python-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app-python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app-python
  template:
    metadata:
      labels:
        app: my-app-python
    spec:
      containers:
      - name: my-app-python
        image: muurrk/myapp:latest
        ports:
        - containerPort: 8080
