k8s/python-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-python
spec:
  selector:
    app: my-app-python
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
