k8s/python-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-python-ingress
    annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: my.app.python.ingress.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-python
            port:
              number: 8080
